<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">词Ci</string>
    <string name="search_hint">在%1$s中搜索</string>
    <string name="search_cipai_hint">搜索词牌</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="delete">删除</string>
    <string name="delete_title">确认删除</string>
    <string name="delete_content">确定删除这篇词作？</string>
    <string name="save_title">确定保存</string>
    <string name="save_content">确定保存此次修改？</string>
    <string name="save">保存</string>
    <string name="give_up">放弃</string>
    <string name="copy_text_done">文本已复制到剪切板</string>

    
    <string name="setting_yun">韵典</string>
    <string name="setting_typeface">简繁切换</string>
    <string name="setting_about">关于词Ci</string>
    <string name="setting_username">用户名</string>
    
    <string name="setting_check">检查平仄</string>
    <string name="check_true">自动检查</string>
    <string name="check_false">不自动检查</string>
    <string name="setting_ad">支持开发者（应用推荐）</string>
    
    <string name="notice_title">词Ci用户交流请加QQ群：439747099</string>
    
    <string name="sort_default">默认排序</string>
    <string name="sort_count">按字数排序</string>
    
    <string name="about_text">Android版词Ci从IOS同名应用模仿而成。</string>
    
    <string name="about_text1">原应用的介绍：\nApp来自朋友42|o-@douban的需求，UI设计借鉴了Bamboo Loop、http://niponcolors.com/ 和上海松江醉白池。\n大部分词牌平仄、例词选编、例词注解来自龙榆生纪念网站，龙榆生先生所著的《唐宋词格律》：http://longyusheng.org/cipai/index.html</string>
    
    <string name="about_text2">方正字库为《词Ci》非商业版本提供字体授权。授权字体为：方正清刻本悦宋。欢迎大家去微博关注@方正字库美丽的字体。</string>
    
    <string name="about_text3">有建议或者bug请联系：\nandymao1991@gmail.com</string>
    
</resources>