<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:background="@drawable/setting_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/item_yun"
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <TextView
                android:id="@+id/yun_title"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/setting_yun"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/yun_value"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:drawableRight="@drawable/next_hl"
                android:gravity="center"
                android:text="@string/setting_yun"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/setting_line" />

        <RelativeLayout
            android:id="@+id/item_typeface"
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <TextView
                android:id="@+id/typeface_title"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/setting_typeface"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/typeface_value"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:drawableRight="@drawable/next_hl"
                android:gravity="center"
                android:text="@string/setting_yun"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/setting_line" />

        <RelativeLayout
            android:id="@+id/item_check"
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <TextView
                android:id="@+id/check_title"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/setting_check"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/check_value"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:drawableRight="@drawable/next_hl"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/setting_line" />

        <RelativeLayout
            android:id="@+id/item_about"
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <TextView
                android:id="@+id/about_title"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/setting_about"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/about_value"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:drawableRight="@drawable/next_hl"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/setting_line" />

        <RelativeLayout
            android:id="@+id/item_notice"
            android:layout_width="match_parent"
            android:layout_height="60dp" >

            <TextView
                android:id="@+id/notice_title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/notice_title"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>